[artf623642]- Alignment issues fixed.

--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/media-queries.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/media-queries.css
@@ -98,7 +98,13 @@ Width <= 1024
 	}
 	
 	.accordion_panel_inner {
-		height:	278px !important;
+		height:	300px !important;
+	}
+	
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	278px !important;
+		}
 	}
 }
 
@@ -139,7 +145,7 @@ Width >= 1152 and < 1280
 	}
 	
 	.accordion_panel_inner {
-		height:	335px !important;
+		height:	400px !important;
 	}
 	.psbltextwidth{
 		width: 63%;
@@ -154,6 +160,11 @@ Width >= 1152 and < 1280
 	}
 	#subTabcontent {
 		width: 79%;
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	335px !important;
+		}
 	}
 }
 
@@ -217,10 +228,15 @@ Width <= 1280 and height <= 768
 	}
 	
 	.accordion_panel_inner {
-		height:	260px !important;
+		height:	330px !important;
 	}
 	.psbltextwidth{
 		width: 64%;
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	290px !important;
+		}
 	}
 }
 
@@ -237,13 +253,18 @@ Width >= 1280 and height <= 800
 	}
 	
 	.accordion_panel_inner {
-		height:	299px !important;
+		height:	380px !important;
 	}
 	.psbltextwidth{
 		width: 64%;
 	}
 	.syncTable .fixed-table-container {
 		height: 400px !important;	
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	320px !important;
+		}
 	}
 }
 
@@ -260,13 +281,18 @@ Width >= 1280 and height > 800 and height <= 960
 	}
 	
 	.accordion_panel_inner {
-		height:	415px !important;
+		height:	480px !important;
 	}
 	.psbltextwidth{
 		width: 64%;
 	}
 	.syncTable .fixed-table-container {
 		height: 450px !important;	
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	415px !important;
+		}
 	}
 }
 
@@ -283,13 +309,18 @@ Width >= 1280 and height >= 961 and heigth <=1024
 	}
 	
 	.accordion_panel_inner {
-		height:	450px !important;
+		height:	540px !important;
 	}
 	.psbltextwidth{
 		width: 64%;
 	}
 	.syncTable .fixed-table-container {
 		height: 480px !important;	
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	450px !important;
+		}
 	}
 }
 
@@ -314,7 +345,7 @@ Width > 1280 and <= 1360
 	}
 	
 	.accordion_panel_inner {
-		height:	295px !important;
+		height:	340px !important;
 	}	
 	.psbltextwidth{
 		width: 64%;
@@ -329,6 +360,11 @@ Width > 1280 and <= 1360
 	}
 	#subTabcontent {
 		width: 82%;
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	295px !important;
+		}
 	}
 }
 
@@ -353,7 +389,7 @@ Width > 1360 and <= 1600
 	}
 	
 	.accordion_panel_inner {
-		height:	375px !important;
+		height:	420px !important;
 	}
 	.psbltextwidth{
 		width: 64%;
@@ -368,6 +404,11 @@ Width > 1360 and <= 1600
 	}
 	#subTabcontent {
 		width: 83%;
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	375px !important;
+		}
 	}
 }
 
@@ -392,7 +433,7 @@ Width > 1440 and <= 1600
 	}
 	
 	.accordion_panel_inner {
-		height:	375px !important;
+		height:	420px !important;
 	}
 	.psbltextwidth{
 		width: 64%;
@@ -407,5 +448,10 @@ Width > 1440 and <= 1600
 	}
 	#subTabcontent {
 		width: 84%;
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	375px !important;
+		}
 	}
 }
